<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextDichVu"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/chiphidichvu"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d_ch_v_nh_th_n_o"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextDichVu" />

    <RadioGroup
        android:id="@+id/group_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewQuestion">

        <RadioButton
            android:id="@+id/button_amazing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuyetvoi" />

        <RadioButton
            android:id="@+id/button_good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_t_18" />

        <RadioButton
            android:id="@+id/button_okay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_m_c_15" />

    </RadioGroup>

    <Switch
        android:id="@+id/switch_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/lamtrontip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_button" />

    <Button
        android:id="@+id/button_tinhtien"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/t_nh_ti_n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_1" />

    <TextView
        android:id="@+id/textView_ketQua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Tiền tip: $10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_tinhtien" />

</android.support.constraint.ConstraintLayout>